[gd_scene load_steps=6 format=2]

[ext_resource path="res://StableHordeClient.gd" type="Script" id=1]
[ext_resource path="res://addons/stable_horde_client/stable_horde_client.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://theme/kenneyUI-green.tres" type="Theme" id=4]
[ext_resource path="res://ConfigSlider.tscn" type="PackedScene" id=5]

[node name="TabContainer" type="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
tabs_visible = false
script = ExtResource( 1 )

[node name="StableHordeClient" type="HTTPRequest" parent="."]
unique_name_in_owner = true
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
theme = ExtResource( 4 )

[node name="Generate" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1592.0
margin_bottom = 42.0

[node name="PromptLine" type="LineEdit" parent="VBoxContainer/Generate"]
unique_name_in_owner = true
margin_right = 1463.0
margin_bottom = 42.0
size_flags_horizontal = 3
placeholder_text = "A horde of cute blue robots with gears on their head."

[node name="GenerateButton" type="Button" parent="VBoxContainer/Generate"]
unique_name_in_owner = true
margin_left = 1467.0
margin_right = 1592.32
margin_bottom = 42.251
text = "Generate"

[node name="MainArea" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 1592.0
margin_bottom = 888.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ControlsLeft" type="VBoxContainer" parent="VBoxContainer/MainArea"]
margin_right = 392.0
margin_bottom = 842.0
size_flags_horizontal = 3

[node name="Width" parent="VBoxContainer/MainArea/ControlsLeft" instance=ExtResource( 5 )]
unique_name_in_owner = true
margin_left = 0.0
margin_right = 392.0
margin_bottom = 64.0
config_setting = "width"

[node name="Height" parent="VBoxContainer/MainArea/ControlsLeft" instance=ExtResource( 5 )]
unique_name_in_owner = true
margin_left = 0.0
margin_top = 68.0
margin_right = 392.0
margin_bottom = 132.0
config_setting = "height"

[node name="Amount" parent="VBoxContainer/MainArea/ControlsLeft" instance=ExtResource( 5 )]
unique_name_in_owner = true
margin_left = 0.0
margin_top = 136.0
margin_right = 392.0
margin_bottom = 200.0

[node name="Seed" type="LineEdit" parent="VBoxContainer/MainArea/ControlsLeft"]
margin_top = 204.0
margin_right = 392.0
margin_bottom = 243.434

[node name="Display" type="VBoxContainer" parent="VBoxContainer/MainArea"]
unique_name_in_owner = true
margin_left = 396.0
margin_right = 1196.0
margin_bottom = 842.0
rect_min_size = Vector2( 800, 0 )

[node name="Grid" type="GridContainer" parent="VBoxContainer/MainArea/Display"]
unique_name_in_owner = true
margin_right = 800.0
margin_bottom = 842.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 7

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MainArea/Display/Grid"]
margin_right = 128.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="ControlsRight" type="VBoxContainer" parent="VBoxContainer/MainArea"]
margin_left = 1200.0
margin_right = 1592.0
margin_bottom = 842.0
size_flags_horizontal = 3

[connection signal="pressed" from="VBoxContainer/Generate/GenerateButton" to="VBoxContainer" method="_on_Button_pressed"]
